# run_routes

./: .gitignore  CLAUDE.md  advanced_caching.py  analyze_tile.py  cache_manager.py  cli_route_planner.py  create_3dep_comparison.py  demo_phase1.py  demo_week3_evolution.py  distance_cache.py  download_srtm.py  elevation_cache_manager.py  elevation_comparison_wireframe.py  elevation_config.json  elevation_data  elevation_data_sources.py  eval_k_shortest.py  find_valid_3dep_coords.py  footway_filtering_implementation.md  footway_visualization.py  ga.md  ga_algorithm_selector.py  ga_base_visualizer.py  ga_chromosome.py  ga_common_imports.py  ga_config_manager.py  ga_development_test.py  ga_distance_optimizer.py  ga_fitness.py  ga_fitness_enhanced.py  ga_hyperparameter_optimizer.py  ga_memory_optimizer.py  ga_operator_visualization.py  ga_operators.py  ga_parallel_evaluator.py  ga_parameter_tuner.py  ga_performance_benchmark.py  ga_performance_cache.py  ga_population.py  ga_precision_fitness.py  (+51 more)
docs/development/: 3dep_implementation_summary.md  3dep_revised_integration_plan.md  ga.md  roadmap.md
genetic_algorithm/: __init__.py  adaptive_mutation.py  analysis.py  chromosome.py  constraint_preserving_operators.py  core.py  distance_compliant_population.py  diversity_selection.py  fitness.py  operators.py  optimization.py  optimizer.py  performance.py  population.py  restart_mechanisms.py  terrain_aware_initialization.py  visualization.py
route_services/: __init__.py  elevation_profiler.py  elevation_profiler_enhanced.py  network_manager.py  route_analyzer.py  route_formatter.py  route_optimizer.py
scripts/demos/: simple_week4_visualizations.py
tests/: coverage_badges.md  ga_test_utils.py  generate_coverage_badge.py  minimal_test.py  quick_tsp_test.py  run_simple_tests.py  run_tests.py  smoke_tests.py  test_cache_loading.py  test_cli_input_handling.py  test_cli_node_validation.py  test_enhanced_cli.py  test_fast_solver.py  test_improved_cli.py  test_improved_performance.py  test_menu_logic.py  test_optimized_solver.py  test_phase1.py  test_tsp.py  test_ui_components.py  test_ui_simple.py  test_visualization_fix.py
tests/benchmark/: __init__.py  test_ga_vs_tsp_benchmark.py
tests/integration/: test_ga_integration.py  test_ga_real_world.py  test_route_services_integration.py
tests/unit/: test_constraint_preserving_operators.py  test_distance_compliant_population.py  test_elevation_profiler.py  test_elevation_profiler_enhanced.py  test_ga_analysis.py  test_ga_chromosome.py  test_ga_fitness.py  test_ga_operators.py  test_ga_optimization.py  test_ga_parameter_tuning.py  test_ga_performance.py  test_ga_population.py  test_ga_population_enhanced.py  test_ga_restart_mechanisms.py  test_ga_visualization.py  test_ga_visualizer.py  test_genetic_optimizer.py  test_genetic_optimizer_enhanced.py  test_graph_cache.py  test_network_manager.py  test_route_analyzer.py  test_route_formatter.py  test_route_optimizer.py  test_route_utilities.py  test_start_node_selection.py
week4_performance_results/: week4_performance_report.md
